--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stock24_dz">
+    package="com.stock24_dz" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,7 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_stock_24_logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Stock24">
+        android:theme="@style/Theme.Stock24" >
+        <activity
+            android:name=".verfication_phone_number"
+            android:exported="false" />
+        <activity
+            android:name=".login_facebook"
+            android:exported="false" />
         <activity
             android:name=".Fragment.FragmenHome.announcement_detail"
             android:exported="false" />
@@ -16,20 +24,20 @@
             android:name=".register"
             android:exported="false" />
         <activity
-            android:name=".category"
-            android:exported="false" />
-        <activity
             android:name=".splashscreen"
             android:exported="false" />
         <activity
-            android:name=".login"
+            android:name=".home"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".home"
-            android:exported="true">
+            android:name=".login"
+            android:exported="false" />
+        <activity
+            android:name=".category"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,6 +48,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
